--- a/h05/StyleSheet.css
+++ b/h05/StyleSheet.css
@@ -1,77 +1,152 @@
- * {
-     box-sizing: border-box;
- }
+/*index.html*/
+* {
+    box-sizing: border-box;
+}
 
- div#wrapper , footer  {
-     margin:auto;
-     width: 1200px;
-     background-color:rgb(251,235,235);
-     padding:20px
+div#wrapper, footer {
+    margin: auto;
+    width: 1000px;
+    background-color: rgb(251, 235, 235);
+    padding: 20px;
+}
+
+body {
+    font-family: Arial;
+    line-height: 20px;
+}
+
+nav {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+nav a {
+    margin-right: 20px;
+}
+
+section.appel, section.visuals {
+    width: 50%;
+    float: left;
+}
+
+section.visuals {
+    text-align: right;
+}
+
+img.appel {
+    width: 492px;
+}
+
+img.visuals {
+    width: 447px;
+    margin-bottom: 11px;
+}
+
+img.article {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 300px;
+}
+
+article {
+    display: inline-block;
+    width: 33%;
+    padding-right: 15px;
+    vertical-align: top;
+}
+
+article:last-child {
+    padding-right: 0px;
+}
+
+footer {
+    background-color: rgb(166, 166, 166);
+    color: white;
+}
+
+footer a {
+    color: white;
+}
+
+/*formulier.html*/
+.secone {
+
+}
+
+.listone {
+    list-style-type: none;
+    padding: 0;
+}
+
+.listone li {
+    padding: 0px;
+}
+
+.input {
+    padding: 20px;
+    width: 380px;
+}
+
+.input input {
+    float: right;
+}
+
+.input label {
+    vertical-align: top;
+}
+
+.input textarea {
+    float: right;
+    width: 200px;
+    height: 100px;
+}
+
+.input select {
+    float: right;
+}
+
+.input2 {
+
+    padding: 20px;
+    width: 380px;
+}
+
+.vrouw {
+    display: inline;
+    float: right;
+}
+
+.man {
+    display: inline;
+    position: relative;
+    left: 100px;
+}
+
+.sectwo {
+    width: 250px;
+    position: absolute;
+    top: 70px;
+    left: 400px;
+}
+
+.sectwo ul{
+    list-style-type: none;
+    padding: 0;
+}
 
 
- }
+.inut2 {
+    display: inline;
+    position: relative;
+    left: 150px;
+}
 
+.label{
+    position: relative;
+    top: 17px;
+}
 
- body {
-     font-family: Arial;
-
- }
-
- nav {
-     margin-top:50px;
-     margin-bottom:50px;
-
- }
-
- nav a {
-     margin-right:20px;
- }
-
- section.Appel, section.Plaatjes {
-     width:50%;
-     float:left;
- }
-
- section.Plaatjes {
-     text-align: right;
- }
-
- article {
-     display: inline-block;
-     width: 30%;
-     padding-right: 10px;
-     vertical-align:top;
-     line-height: 25px;
- }
-
- img.article {
-     margin-bottom: 20px;
-     margin-top: 20px;
- }
-
- article:last-child {
-     padding-right: 0px;
- }
-
- footer {
-     background-color:rgb(126,126,126);
-     color:white;
- }
-
- footer a {
-     color:white;
-
- }
- form ul {
-     list-style-type: none;
-     padding: 0;
- }
- form ul li {
-     padding: 10px;
- }
- form ul li input {
-     position: absolute;
-     left: 150px;
- }
-
-
+.buttons{
+    text-align: right;
+    width: 600px;
+}
